# giterate

./: CMakeLists.txt  README.md
src/: main.cpp  user_api.hpp  user_code.cpp
src/examples/: cylinder.cpp  generate_quad_strip.cpp  icosahedron.cpp
